增加虚拟实体，并在EntityEx和UnitOfWork中处理

--- a/Client/Dt.Core/Dt.Core.csproj
+++ b/Client/Dt.Core/Dt.Core.csproj
@@ -20,6 +20,9 @@
 		<Compile Include="..\..\Service\src\Dt.Core\Base\MySql\TableSchema.cs" Link="Base\DataProvider\TableSchema.cs" />
 		<Compile Include="..\..\Service\src\Dt.Core\Base\Domain\Entity\Entity.cs" Link="Base\Domain\Entity\Entity.cs" />
         <Compile Include="..\..\Service\src\Dt.Core\Base\Domain\Entity\EntityEx.cs" Link="Base\Domain\Entity\EntityEx.cs" />
+        <Compile Include="..\..\Service\src\Dt.Core\Base\Domain\Entity\VirEntity.cs" Link="Base\Domain\Entity\VirEntity.cs" />
+        <Compile Include="..\..\Service\src\Dt.Core\Base\Domain\Entity\VirObj.cs" Link="Base\Domain\Entity\VirObj.cs" />
+        <Compile Include="..\..\Service\src\Dt.Core\Base\Domain\Entity\VirEntitySchema.cs" Link="Base\Domain\Entity\VirEntitySchema.cs" />
         <Compile Include="..\..\Service\src\Dt.Core\Base\Domain\Entity\TblAttribute.cs" Link="Base\Domain\Entity\TblAttribute.cs" />
         <Compile Include="..\..\Service\src\Dt.Core\Base\Domain\Entity\CudEventAttribute.cs" Link="Base\Domain\Entity\CudEventAttribute.cs" />
         <Compile Include="..\..\Service\src\Dt.Core\Base\Domain\Entity\CacheAttribute.cs" Link="Base\Domain\Entity\CacheAttribute.cs" />
