--- a/Client/Dt.MgrDemo/Dt.MgrDemo.csproj
+++ b/Client/Dt.MgrDemo/Dt.MgrDemo.csproj
@@ -18,4 +18,8 @@
         <Using Include="Dt.Mgr.Domain" />
         <Using Include="Dt.MgrDemo.Domain" />
     </ItemGroup>
+    
+    <ItemGroup>
+      <Folder Include="Crud\Domain\" />
+    </ItemGroup>
 </Project>
