--- a/Tools/DtTemplates/Dt/Dt.csproj
+++ b/Tools/DtTemplates/Dt/Dt.csproj
@@ -58,6 +58,7 @@
     <EmbeddedResource Include="InsertClass\CellUITemp.cs" />
     <EmbeddedResource Include="InsertClass\CListExTemp.cs" />
     <EmbeddedResource Include="InsertClass\DomainSvc.cs" />
+    <EmbeddedResource Include="InsertClass\EventTemp.cs" />
     <Compile Include="InsertClass\ClsType.cs" />
     <EmbeddedResource Include="InsertClass\FvCallTemp.cs" />
     <Compile Include="InsertClass\InsertClassForm.cs">
