父子实体的增删改查样例

--- a/Client/Dt.Core/Dt.Core.csproj
+++ b/Client/Dt.Core/Dt.Core.csproj
@@ -24,11 +24,13 @@
         <Compile Include="..\..\Service\src\Dt.Core\Base\Domain\Entity\VirEntitySchema.cs" Link="Base\Domain\Entity\VirEntitySchema.cs" />
         <Compile Include="..\..\Service\src\Dt.Core\Base\Domain\Entity\TblAttribute.cs" Link="Base\Domain\Entity\TblAttribute.cs" />
         <Compile Include="..\..\Service\src\Dt.Core\Base\Domain\Entity\CacheAttribute.cs" Link="Base\Domain\Entity\CacheAttribute.cs" />
-        <Compile Include="..\..\Service\src\Dt.Core\Base\Domain\IEntityAccess.cs" Link="Base\Domain\IEntityAccess.cs" />
+        <Compile Include="..\..\Service\src\Dt.Core\Base\Domain\Entity\ChildEntitySchema.cs" Link="Base\Domain\Entity\ChildEntitySchema.cs" />
+        <Compile Include="..\..\Service\src\Dt.Core\Base\Domain\Entity\ChildXAttribute.cs" Link="Base\Domain\Entity\ChildXAttribute.cs" />
         <Compile Include="..\..\Service\src\Dt.Core\Base\EventBus\IEvent.cs" Link="Base\Domain\Event\IEvent.cs" />
         <Compile Include="..\..\Service\src\Dt.Core\Base\EventBus\Local\IEventHandler.cs" Link="Base\Domain\Event\IEventHandler.cs" />
         <Compile Include="..\..\Service\src\Dt.Core\Base\Domain\Writer\EntityWriter.cs" Link="Base\Domain\Writer\EntityWriter.cs" />
         <Compile Include="..\..\Service\src\Dt.Core\Base\Domain\Writer\UnitItem.cs" Link="Base\Domain\Writer\UnitItem.cs" />
+        <Compile Include="..\..\Service\src\Dt.Core\Base\DataAccess\IDataAccess.cs" Link="Base\DataAccess\IDataAccess.cs" />
         <Compile Include="..\..\Service\src\Dt.Core\Base\DataAccess\MySql\TableSchema.cs" Link="Base\DataAccess\TableSchema.cs" />
 		<Compile Include="..\..\Service\src\Dt.Core\Base\DataAccess\EntitySchema.cs" Link="Base\DataAccess\EntitySchema.cs" />
 		<Compile Include="..\..\Service\src\Dt.Core\Internal\Extensions\EnumEx.cs" Link="Internal\Extensions\EnumEx.cs" />
