生成的实体类增加自定义服务名

--- a/Client/Dt.Core/Dt.Core.csproj
+++ b/Client/Dt.Core/Dt.Core.csproj
@@ -21,19 +21,17 @@
         <Compile Include="..\..\Service\src\Dt.Core\Base\Domain\Entity\EntityX.cs" Link="Base\Domain\Entity\EntityX.cs" />
         <Compile Include="..\..\Service\src\Dt.Core\Base\Domain\Entity\IVirEntity.cs" Link="Base\Domain\Entity\IVirEntity.cs" />
         <Compile Include="..\..\Service\src\Dt.Core\Base\Domain\Entity\VirX.cs" Link="Base\Domain\Entity\VirX.cs" />
-        <Compile Include="..\..\Service\src\Dt.Core\Base\Domain\Entity\VirEntitySchema.cs" Link="Base\Domain\Entity\VirEntitySchema.cs" />
-        <Compile Include="..\..\Service\src\Dt.Core\Base\Domain\Entity\TblAttribute.cs" Link="Base\Domain\Entity\TblAttribute.cs" />
-        <Compile Include="..\..\Service\src\Dt.Core\Base\Domain\Cache\CacheAttribute.cs" Link="Base\Domain\Cache\CacheAttribute.cs" />
-        <Compile Include="..\..\Service\src\Dt.Core\Base\Domain\Cache\EntityCacher.cs" Link="Base\Domain\Cache\EntityCacher.cs" />
-        <Compile Include="..\..\Service\src\Dt.Core\Base\Domain\Entity\ChildEntitySchema.cs" Link="Base\Domain\Entity\ChildEntitySchema.cs" />
-        <Compile Include="..\..\Service\src\Dt.Core\Base\Domain\Entity\ChildXAttribute.cs" Link="Base\Domain\Entity\ChildXAttribute.cs" />
+        <Compile Include="..\..\Service\src\Dt.Core\Base\Domain\Schema\VirEntitySchema.cs" Link="Base\Domain\Schema\VirEntitySchema.cs" />
+        <Compile Include="..\..\Service\src\Dt.Core\Base\Domain\Schema\ChildEntitySchema.cs" Link="Base\Domain\Schema\ChildEntitySchema.cs" />
+        <Compile Include="..\..\Service\src\Dt.Core\Base\Domain\Schema\EntitySchema.cs" Link="Base\Domain\Schema\EntitySchema.cs" />
+        <Compile Include="..\..\Service\src\Dt.Core\Base\Domain\Attributes.cs" Link="Base\Domain\Attributes.cs" />
+        <Compile Include="..\..\Service\src\Dt.Core\Base\Domain\EntityCacher.cs" Link="Base\Domain\EntityCacher.cs" />
         <Compile Include="..\..\Service\src\Dt.Core\Base\EventBus\IEvent.cs" Link="Base\Domain\Event\IEvent.cs" />
         <Compile Include="..\..\Service\src\Dt.Core\Base\EventBus\Local\IEventHandler.cs" Link="Base\Domain\Event\IEventHandler.cs" />
         <Compile Include="..\..\Service\src\Dt.Core\Base\Domain\Writer\EntityWriter.cs" Link="Base\Domain\Writer\EntityWriter.cs" />
         <Compile Include="..\..\Service\src\Dt.Core\Base\Domain\Writer\UnitItem.cs" Link="Base\Domain\Writer\UnitItem.cs" />
         <Compile Include="..\..\Service\src\Dt.Core\Base\DataAccess\IDataAccess.cs" Link="Base\DataAccess\IDataAccess.cs" />
         <Compile Include="..\..\Service\src\Dt.Core\Base\DataAccess\MySql\TableSchema.cs" Link="Base\DataAccess\TableSchema.cs" />
-		<Compile Include="..\..\Service\src\Dt.Core\Base\DataAccess\EntitySchema.cs" Link="Base\DataAccess\EntitySchema.cs" />
 		<Compile Include="..\..\Service\src\Dt.Core\Internal\Extensions\EnumEx.cs" Link="Internal\Extensions\EnumEx.cs" />
 		<Compile Include="..\..\Service\src\Dt.Core\Internal\Extensions\ObjectEx.cs" Link="Internal\Extensions\ObjectEx.cs" />
 		<Compile Include="..\..\Service\src\Dt.Core\Internal\Misc\AsyncLocker.cs" Link="Base\Locker\AsyncLocker.cs" />
